--- a/tenement-api/src/main/resources/templates/index.html
+++ b/tenement-api/src/main/resources/templates/index.html
@@ -5,9 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-<form method="post" action="/room/uploadFile" enctype="multipart/form-data">
+<form method="post" action="/house/room/uploadFile" enctype="multipart/form-data">
         <input name = "file" type = "file"><br>
+    <input name = "file" type = "file"><br>
        <input type = "submit" value = "点击上传">
 </form>
+
 </body>
 </html>
